Code beautify.